--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -36,16 +36,15 @@ body {
 .default-btn.controll-btn .ico {
   width: 25px;
 }
-.default-btn.committee-btn .ico {
-  width: 28px;
-}
 .default-btn .ico {
   float: left;
-  width: 20px;
+  width: 28px;
   display: block;
-  margin-right: 7px;
+  margin-right: 10px;
 }
 .default-btn .txt {
+  float: left;
+  text-align: left;
   font-size: 12px;
   line-height: 26px;
   font-weight: bold;
@@ -57,8 +56,8 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 8%;
-  overflow: hidden;
   position: relative;
+  overflow-y: auto;
   color: #ffffff;
   background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
 }
