--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -56,9 +56,7 @@ body {
     }
 
     &.committee-btn {
-        .ico {
-            width: 28px;
-        }
+
     }
 
     &.news-btn {
@@ -67,11 +65,13 @@ body {
 
     .ico {
         float: left;
-        width: 20px;
+        width: 28px;
         display: block;
-        margin-right: 7px;
+        margin-right: 10px;
     }
     .txt {
+        float: left;
+        text-align: left;
         font-size: 12px;
         line-height: 26px;
         font-weight: bold;
@@ -88,8 +88,8 @@ body {
     width: 100%;
     height: 100%;
     padding-top: 8%;
-    overflow: hidden;
     position: relative;
+    overflow-y: auto;
     color: #ffffff;
     background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
 
