--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -29,6 +29,10 @@ body {
     text-align: center;
 }
 
+.hidden {
+    display: none;
+}
+
 // Buttons
 
 
@@ -76,6 +80,24 @@ body {
         line-height: 26px;
         font-weight: bold;
         text-transform: uppercase;
+        text-shadow: 1px 1px 0px #414141;
+        letter-spacing: 0.1px;  
+    }
+}
+
+.back-btn {
+    padding-top: 10px !important;
+    img {
+        width: 25px;
+    }
+}
+
+
+.bar-header {
+    height: 55px;
+    color: #5c5c5c !important;
+    .title {
+        line-height: 55px;
     }
 }
 
@@ -84,7 +106,7 @@ body {
 
 /* ===== Home Screen ===== */
 
-#home-tpl {
+.home-tpl {
     width: 100%;
     height: 100%;
     padding-top: 8%;
@@ -114,6 +136,14 @@ body {
 
 /* ===== END Home Screen ===== */
 
+
+/* ===== Plenary Screen ===== */
+
+.plenary-tpl {
+
+}
+
+/* ===== END Plenary Screen ===== */
 
 /* ======= PLAIN CSS ======== */
 
