--- a/platforms/android/assets/www/assets/css/styles.css
+++ b/platforms/android/assets/www/assets/css/styles.css
@@ -1,185 +1,258 @@
+/* ===== Global Elements ===== */
+body {
+  background: #dfdfdf;
+}
+.center {
+  text-align: center;
+}
+.hidden {
+  display: none;
+}
+.default-btn {
+  display: inline-block;
+  width: 80%;
+  padding: 10px 12px;
+  background: rgba(255, 255, 255, 0.2);
+  -webkit-border-top-right-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-top-left-radius: 3px;
+  -moz-border-radius-topright: 3px;
+  -moz-border-radius-bottomright: 3px;
+  -moz-border-radius-bottomleft: 3px;
+  -moz-border-radius-topleft: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border: 1px solid #ffffff;
+}
+.default-btn:active {
+  background: rgba(255, 255, 255, 0.4);
+}
+.default-btn.plenary-btn .ico {
+  width: 20px;
+}
+.default-btn.controll-btn .ico {
+  width: 25px;
+}
+.default-btn .ico {
+  float: left;
+  width: 28px;
+  display: block;
+  margin-right: 10px;
+}
+.default-btn .txt {
+  float: left;
+  text-align: left;
+  font-size: 12px;
+  line-height: 26px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-shadow: 1px 1px 0px #414141;
+  letter-spacing: 0.1px;
+}
+.back-btn {
+  padding-top: 10px !important;
+}
+.back-btn img {
+  width: 25px;
+}
+.bar-header {
+  height: 55px;
+  color: #5c5c5c !important;
+}
+.bar-header .title {
+  line-height: 55px;
+}
+/* === END Global Elements === */
+/* ===== Home Screen ===== */
+.home-tpl {
+  width: 100%;
+  height: 100%;
+  padding-top: 8%;
+  position: relative;
+  overflow-y: auto;
+  color: #ffffff;
+  background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
+}
+.home-tpl .armorial-wrapper {
+  width: 100%;
+  overflow: hidden;
+  text-align: center;
+}
+.home-tpl .armorial-wrapper .armorial {
+  width: 100px;
+  display: inline-block;
+}
+.home-tpl .armorial-wrapper .title {
+  color: #ffffff;
+  font-size: 25px;
+}
+.home-tpl .armorial-wrapper .title span {
+  font-size: 20px;
+}
+/* ===== END Home Screen ===== */
+/* ===== Plenary Screen ===== */
+/* ===== END Plenary Screen ===== */
+/* ======= PLAIN CSS ======== */
 .scroller {
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    position: absolute;
-    top: 141px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  position: absolute;
+  top: 141px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
-
 .back-button {
-    position: absolute;
-    top: 10px;
+  position: absolute;
+  top: 10px;
 }
-
 .topcoat-icon--back {
-    background: url("../topcoat/img/back_light.svg") no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+  background: url("../topcoat/img/back_light.svg") no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
-
 .search-bar {
-    padding:10px 10px 12px 8px;
+  padding: 10px 10px 12px 8px;
 }
-
 .search-bar > input {
-    width: 100%;
+  width: 100%;
 }
-
 a {
-    text-decoration: none;
-    color: inherit;
-    -webkit-touch-callout: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0);
+  text-decoration: none;
+  color: inherit;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
 .list {
-    list-style-type: none;
-    border-top: none !important;
+  list-style-type: none;
+  border-top: none !important;
 }
-
 .list > li {
-    position: relative;
-    clear: both;
-    padding: 0px;
-    margin: 0px;
+  position: relative;
+  clear: both;
+  padding: 0px;
+  margin: 0px;
 }
-
 .list > li:nth-of-type(1) {
-    border-top: none;
+  border-top: none;
 }
-
 .list > li > a {
-    margin: 0px;
-    display: block;
-    height: 57px;
-    padding: 4px;
+  margin: 0px;
+  display: block;
+  height: 57px;
+  padding: 4px;
 }
-
-
 .list > li > a > p:nth-of-type(1) {
-    margin: 8px 0px 0px 0px;
-    font-weight: bold;
+  margin: 8px 0px 0px 0px;
+  font-weight: bold;
 }
-
 .list > li p:nth-of-type(2) {
-    margin: 0px;
-    color: #777;
+  margin: 0px;
+  color: #777;
 }
-
 .list > li img {
-    width: 57px;
-    height: 57px;
-    float: left;
-    margin-right: 8px;
+  width: 57px;
+  height: 57px;
+  float: left;
+  margin-right: 8px;
 }
-
 .list li:active {
-    background-color: #d6d6d6;
+  background-color: #d6d6d6;
 }
-
 .details {
-    margin: auto;
+  margin: auto;
 }
-
-.details>img {
-    float:left;
-    margin:10px;
-    width: 80px;
-    height: 80px;
+.details > img {
+  float: left;
+  margin: 10px;
+  width: 80px;
+  height: 80px;
 }
-
 .details h1 {
-    padding: 12px 0px 4px 0px;
-    margin: 0px 0px 0px 0px;
-    font-size: 1.2rem;
+  padding: 12px 0px 4px 0px;
+  margin: 0px 0px 0px 0px;
+  font-size: 1.2rem;
 }
-
 .details h2 {
-    padding: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    font-size: 1.1rem;
-    font-weight: normal;
-    color: #888;
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+  font-size: 1.1rem;
+  font-weight: normal;
+  color: #888;
 }
-
 .details > .scroller {
-    top:175px;
+  top: 175px;
 }
-
 .actions > li > a {
-    padding-left: 12px;
+  padding-left: 12px;
 }
-
 .action-icon {
-    position: absolute !important;
-    top: 18px;
-    right: 20px !important;
-    width: 28px !important;
-    height: 28px;
+  position: absolute !important;
+  top: 18px;
+  right: 20px !important;
+  width: 28px !important;
+  height: 28px;
 }
-
 .actions li p:nth-of-type(1) {
-    color:  #5DC1FF;
-    font-size: 0.9em;
-    font-weight: lighter;
+  color: #5DC1FF;
+  font-size: 0.9em;
+  font-weight: lighter;
 }
-
 .actions li p:nth-of-type(2) {
-    color: inherit;
+  color: inherit;
 }
-
 .icon-call {
-    background: transparent url(../topcoat/img/call.svg);
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+  background: transparent url(../topcoat/img/call.svg);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
-
 .icon-sms {
-    background: transparent url(../topcoat/img/chat.svg);
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+  background: transparent url(../topcoat/img/chat.svg);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
-
 .icon-mail {
-    background: transparent url(../topcoat/img/email.svg);
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+  background: transparent url(../topcoat/img/email.svg);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
-
 .icon-manager {
-    background: transparent url(../topcoat/img/next.svg);
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+  background: transparent url(../topcoat/img/next.svg);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
-
 .icon-reports {
-    background: transparent url(../topcoat/img/next.svg);
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
+  background: transparent url(../topcoat/img/next.svg);
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
 }
-
 .chevron {
-    background: transparent url(../topcoat/img/next_blue.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: 12px;
-    top: 22px;
-    height: 50px;
-    width: 28px;
+  background: transparent url(../topcoat/img/next_blue.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 12px;
+  top: 22px;
+  height: 50px;
+  width: 28px;
 }
+/* ======= END PLAIN CSS ======== */
