--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -176,13 +176,19 @@ body {
   background-repeat: no-repeat;
   background-position: 0px center;
 }
+.bottom-tabs {
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+}
 /* === END Global Elements === */
 /* ===== Home Screen ===== */
 .home-tpl {
   width: 100%;
   height: 100%;
+  position: fixed;
+  overflow: hidden;
   padding-top: 8%;
-  position: relative;
   overflow-y: auto;
   color: #ffffff;
   background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
