--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -203,6 +203,12 @@ body {
     }
 }
 
+.bottom-tabs {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+}
+
 /* === END Global Elements === */
 
 
@@ -211,8 +217,10 @@ body {
 .home-tpl {
     width: 100%;
     height: 100%;
+    //position: relative;
+    position: fixed;
+    overflow: hidden;
     padding-top: 8%;
-    position: relative;
     overflow-y: auto;
     color: #ffffff;
     background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
