--- a/platforms/android/assets/www/assets/less/styles.less
+++ b/platforms/android/assets/www/assets/less/styles.less
@@ -2,7 +2,9 @@
 
 body {
     background: #dfdfdf;
-    position: relative !important;
+    width: 100% !important;
+    height: 100% !important;
+    position: static !important;
     overflow: auto !important;
 }
 
