--- a/platforms/android/assets/www/assets/less/styles.less
+++ b/platforms/android/assets/www/assets/less/styles.less
@@ -252,7 +252,8 @@ body {
 /* ===== Plenary Screen ===== */
 
 .plenary-tpl {
-
+    overflow: auto;
+    height: 93% !important;
 }
 
 /* ===== END Plenary Screen ===== */
