Home page buttons fixes

--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -58,13 +58,20 @@ body {
     }
 
     &.controll-btn {
+        padding: 10px 7px 10px 12px;
         .ico {
             width: 25px;
         }
     }
 
     &.committee-btn {
-
+        padding: 10px 7px 10px 12px;
+        .ico {
+            width: 25px;
+        }
+        .txt {
+            line-height: 20px;
+        }
     }
 
     &.news-btn {
