--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -114,6 +114,7 @@ body {
 .preview-btn {
     float: right;
     padding-left: 7px !important;
+    padding-right: 7px !important;
     .border-radiuses (0px,0px,0px,0px);
     min-height: 25px !important;
     line-height: 22px !important;
