--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -139,6 +139,15 @@ body {
     }
 }
 
+.title {
+    font-size: 22px;
+}
+
+.external-link {
+    font-weight: bold;
+    color: #3b8da2;
+}
+
 .bar-header {
     height: 55px;
     border-bottom: 1px solid #cfcfcf;
@@ -188,7 +197,7 @@ body {
     width: 100%;
     padding: 10px !important;
     margin-bottom: 4%;
-    background: #ffffff;
+    background: #f7f7f7;
     border-bottom: 2px solid #b4b4b4;
     .description {
         font-size: 10px;
@@ -210,6 +219,30 @@ body {
         background-size: 18px 18px;
         background-repeat: no-repeat;
         background-position: 0px center;
+    }
+}
+
+.detail-preview {
+    background: #f7f7f7;
+    border-bottom: 2px solid #b4b4b4;
+    .date {
+        display: inline-block;
+        padding-left: 25px;
+        margin-bottom: 10px;
+        font-size: 16px;
+        line-height: 24px;
+        color: #535353;
+        background-image: url("../img/date-icon.png");
+        background-size: 18px 18px;
+        background-repeat: no-repeat;
+        background-position: 0px center;
+    }
+    .date-separator {
+        display: inline-block;
+        margin: 0 5px 0 5px;
+        font-size: 16px;
+        line-height: 24px;
+        color: #535353;
     }
 }
 
@@ -306,6 +339,23 @@ body {
 }
 
 /* ===== END Plenary Screen ===== */
+
+/* ===== Plenary Screen Detail View ===== */
+
+.plenary-tpl-detail-preview {
+    .detail-preview {
+        padding: 0px !important;
+    }
+    padding-top: 55px;
+    overflow: auto;
+    .content-wrapper {
+        margin-bottom: 45px;
+        padding: 0px !important;
+    }
+}
+
+/* ===== END Plenary Screen Detail View ===== */
+
 
 /* ======= PLAIN CSS ======== */
 
