--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -37,6 +37,10 @@ body {
     display: none;
 }
 
+.relative {
+    position: relative;
+}
+
 // Buttons
 
 
@@ -136,6 +140,31 @@ body {
         font-size: 10px;
         font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
         text-transform: uppercase;
+    }
+}
+
+.subscribe-list-btn {
+    position: absolute;
+    padding-top: 9px !important;
+    //padding-right: 3px !important;
+    top: 6px;
+    right: 40px;
+    img {
+        width: 24px;
+    }
+}
+
+
+.subscribe-btn {
+    font-size: 25px;
+    position: absolute;
+    top: 0px;
+    right: 5px;
+    &.inactive:before {
+        color: #bababa !important;
+    }
+    &.active:before {
+        color: #49d06c  !important;
     }
 }
 
@@ -410,7 +439,8 @@ body {
 
 .controll-tpl,
 .committee-tpl,
-.news-tpl {
+.news-tpl,
+.committee-check-list-tpl {
     overflow: auto;
     height: 93% !important;
     .short-preview {
@@ -439,6 +469,34 @@ body {
 }
 
 /* ===== END News Screen ===== */
+
+/* ===== Committee Screen ===== */
+
+.committee-tpl {
+    .bar.bar-header {
+        .title {
+            //text-align: left;
+            //padding-left: 40px;
+        }
+    }
+}
+
+/* ===== END Committee Screen ===== */
+
+/* ===== Committee check-lsit Screen ===== */
+
+.committee-check-list-tpl {
+    .short-preview {
+        .title {
+           width: 90%;
+        }
+    }
+}
+
+/* ===== END Committee check-lsit Screen ===== */
+
+
+
 
 
 /* ===== Options Screen ===== */
@@ -477,6 +535,9 @@ body {
 }
 
 /* ===== END Options Screen ===== */
+
+
+
 
 /* ======= PLAIN CSS ======== */
 
