--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -157,9 +157,8 @@ body {
 
 .subscribe-btn {
     font-size: 25px;
-    position: absolute;
-    top: 0px;
-    right: 5px;
+    float: left;
+    margin-right: 10px;
     &.inactive:before {
         color: #bababa !important;
     }
@@ -490,6 +489,7 @@ body {
     .short-preview {
         .title {
            width: 90%;
+           line-height: 25px;
         }
     }
 }
