--- a/platforms/android/assets/www/assets/less/styles.less
+++ b/platforms/android/assets/www/assets/less/styles.less
@@ -421,7 +421,8 @@ body {
 .plenary-tpl-detail-preview, 
 .controll-tpl-detail-preview, 
 .committee-tpl-detail-preview,
-.news-tpl-detail-preview {
+.news-tpl-detail-preview,
+.committee-check-list-tpl {
     .detail-preview {
         padding: 0px !important;
     }
