--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -143,6 +143,20 @@ body {
     }
 }
 
+.save-btn {
+    .border-radiuses (0px,0px,0px,0px);
+    border: none !important;
+    background: #43c364 !important;
+    color: #ffffff !important;
+    .txt{
+        font-family: "Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+        text-transform: uppercase;
+    }
+    &:active {
+        opacity: 0.7 !important;
+    }
+}
+
 .subscribe-list-btn {
     position: absolute;
     padding-top: 9px !important;
@@ -488,7 +502,6 @@ body {
 .committee-check-list-tpl {
     .short-preview {
         .title {
-           width: 90%;
            line-height: 25px;
         }
     }
