last changes from parliament feedback

--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -177,8 +177,10 @@ body {
   color: #535353;
   font-size: 20px;
 }
+.external-link-wrapper {
+  list-style: none;
+}
 .external-link {
-  font-weight: bold;
   color: #3b8da2;
 }
 .file-link {
@@ -187,9 +189,8 @@ body {
   padding: 7px 0px 7px 25px;
   color: #535353;
   font-size: 14px;
-  font-weight: bold;
   background-image: url("../img/file-icon.png");
-  background-size: 13px 19px;
+  background-size: 15px 20px;
   background-repeat: no-repeat;
   background-position: 0px center;
 }
@@ -433,6 +434,9 @@ body {
 }
 /* ===== END Controll Screen ===== */
 /* ===== News Screen ===== */
+.news-tpl .short-preview .title {
+  font-size: 16px;
+}
 .news-tpl .short-preview .date {
   margin-top: 4px;
   font-size: 16px;
@@ -444,7 +448,8 @@ body {
 /* ===== END Committee Screen ===== */
 /* ===== Committee check-lsit Screen ===== */
 .committee-check-list-tpl .short-preview .title {
-  line-height: 25px;
+  font-size: 14px;
+  line-height: 18px;
 }
 /* ===== END Committee check-lsit Screen ===== */
 /* ===== Options Screen ===== */
