--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -186,8 +186,11 @@ body {
     font-size: 20px;
 }
 
+.external-link-wrapper {
+    list-style: none;
+}
+
 .external-link {
-    font-weight: bold;
     color: #3b8da2;
 }
 
@@ -197,9 +200,8 @@ body {
     padding: 7px 0px 7px 25px;
     color: #535353;
     font-size: 14px;
-    font-weight: bold;
     background-image: url("../img/file-icon.png");
-    background-size: 13px 19px;
+    background-size: 15px 20px;
     background-repeat: no-repeat;
     background-position: 0px center;
 
@@ -473,6 +475,9 @@ body {
 
 .news-tpl {
     .short-preview {
+        .title {
+            font-size: 16px;
+        }
         .date {
             margin-top: 4px;
             font-size: 16px;
@@ -502,7 +507,8 @@ body {
 .committee-check-list-tpl {
     .short-preview {
         .title {
-           line-height: 25px;
+            font-size: 14px;
+           line-height: 18px;
         }
     }
 }
