link design fixes

--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -182,15 +182,20 @@ body {
 }
 .external-link {
   color: #3b8da2;
+  padding-left: 18px;
+  background-image: url("../img/link-icon.png");
+  background-size: 14px 14px;
+  background-repeat: no-repeat;
+  background-position: 0px center;
 }
 .file-link {
+  color: #3b8da2;
   display: inline-block;
   margin-bottom: 8px;
-  padding: 7px 0px 7px 25px;
-  color: #535353;
+  padding: 7px 0px 7px 18px;
   font-size: 14px;
   background-image: url("../img/file-icon.png");
-  background-size: 15px 20px;
+  background-size: 11px 15px;
   background-repeat: no-repeat;
   background-position: 0px center;
 }
