--- a/www/assets/css/snap.css
+++ b/www/assets/css/snap.css
@@ -5,6 +5,7 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  position: absolute;
 }
 
 .snap-content {
@@ -16,7 +17,7 @@ html, body {
   width: auto;
   height: auto;
   z-index: 2;
-  overflow: auto;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -webkit-transform: translate3d(0, 0, 0);
      -moz-transform: translate3d(0, 0, 0);
@@ -43,7 +44,7 @@ html, body {
   left: auto;
   width: 265px;
   height: auto;
-  overflow: auto;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -webkit-transition: width 0.3s ease;
      -moz-transition: width 0.3s ease;
@@ -56,6 +57,7 @@ html, body {
   background-color: #ffffff;
   left: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .snap-drawer-right {
