--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -15,6 +15,13 @@ body {
 .relative {
   position: relative;
 }
+#content.snap-content {
+  position: fixed;
+}
+.placeholder-container {
+  overflow: hidden;
+  height: 100%;
+}
 .default-btn {
   display: inline-block;
   width: 80%;
@@ -88,13 +95,13 @@ body {
 }
 .side-menu-btn {
   display: block;
-  font-size: 40px;
-  color: #ffffff;
-  width: 44px;
-  height: 44px;
+  font-size: 32px;
+  color: #5c5c5c;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 11px;
+  left: 15px;
   z-index: 2;
 }
 .preview-btn {
@@ -466,6 +473,14 @@ body {
   overflow-y: auto;
   color: #ffffff;
   background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
+}
+.home-tpl .side-menu-btn {
+  top: 20px;
+  left: 20px;
+  font-size: 40px;
+  width: 44px;
+  height: 44px;
+  color: #ffffff;
 }
 .home-tpl .armorial-wrapper {
   width: 100%;
