--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -41,6 +41,15 @@ body {
     position: relative;
 }
 
+#content.snap-content  {
+    position: fixed;
+}
+
+.placeholder-container {
+    overflow: hidden; 
+    height: 100%;
+}
+
 // Buttons
 
 
@@ -116,15 +125,14 @@ body {
 
 .side-menu-btn {
   display: block;
-  font-size: 40px;
-  color: #ffffff;
-  width: 44px;
-  height: 44px;
+  font-size: 32px;
+  color: #5c5c5c;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 11px;
+  left: 15px;
   z-index: 2;
-
 }
 
 .preview-btn {
@@ -516,6 +524,15 @@ body {
     overflow-y: auto;
     color: #ffffff;
     background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
+
+    .side-menu-btn {
+        top: 20px;
+        left: 20px;
+        font-size: 40px;
+        width: 44px;
+        height: 44px;
+        color: #ffffff;
+    }
 
     .armorial-wrapper {
         width: 100%;
