--- a/www/assets/less/styles.less
+++ b/www/assets/less/styles.less
@@ -117,7 +117,7 @@ body {
 }
 
 .search-btn {
-    padding-top: 9px !important;
+    padding-top: 20px !important;
     img {
         width: 20px;
     }
@@ -130,7 +130,7 @@ body {
   width: 30px;
   height: 30px;
   position: absolute;
-  top: 11px;
+  top: 25px;
   left: 15px;
   z-index: 2;
 }
@@ -233,14 +233,14 @@ body {
 }
 
 .bar-header {
-    height: 55px;
+    height: 75px;
     border-bottom: 1px solid #cfcfcf;
     background: #fafafa;
     position: fixed;
     top: 0px;
     left: 0px;
     .title {
-        line-height: 55px;
+        line-height: 85px;
         font-size: 18px;
         color: #5c5c5c;
     }
@@ -250,7 +250,7 @@ body {
 }
 
 .search-row {
-    margin-top: 55px;
+    margin-top: 75px;
     padding: 0px !important;
     .col {
         padding: 0px;
@@ -417,7 +417,7 @@ body {
 
 .left-menu {
     .header {
-        padding: 10px 15px;
+        padding: 30px 15px 10px 15px;
         .armorial {
             margin-right: 5px;
             img {
