--- a/platforms/android/assets/www/assets/less/styles.less
+++ b/platforms/android/assets/www/assets/less/styles.less
@@ -41,6 +41,15 @@ body {
     position: relative;
 }
 
+#content.snap-content  {
+    position: fixed;
+}
+
+.placeholder-container {
+    overflow: hidden; 
+    height: 100%;
+}
+
 // Buttons
 
 
@@ -108,7 +117,7 @@ body {
 }
 
 .search-btn {
-    padding-top: 9px !important;
+    padding-top: 20px !important;
     img {
         width: 20px;
     }
@@ -116,15 +125,14 @@ body {
 
 .side-menu-btn {
   display: block;
-  font-size: 40px;
-  color: #ffffff;
-  width: 44px;
-  height: 44px;
+  font-size: 32px;
+  color: #5c5c5c;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 25px;
+  left: 15px;
   z-index: 2;
-
 }
 
 .preview-btn {
@@ -225,14 +233,14 @@ body {
 }
 
 .bar-header {
-    height: 55px;
+    height: 75px;
     border-bottom: 1px solid #cfcfcf;
     background: #fafafa;
     position: fixed;
     top: 0px;
     left: 0px;
     .title {
-        line-height: 55px;
+        line-height: 85px;
         font-size: 18px;
         color: #5c5c5c;
     }
@@ -242,7 +250,7 @@ body {
 }
 
 .search-row {
-    margin-top: 55px;
+    margin-top: 75px;
     padding: 0px !important;
     .col {
         padding: 0px;
@@ -409,7 +417,7 @@ body {
 
 .left-menu {
     .header {
-        padding: 10px 15px;
+        padding: 30px 15px 10px 15px;
         .armorial {
             margin-right: 5px;
             img {
@@ -516,6 +524,15 @@ body {
     overflow-y: auto;
     color: #ffffff;
     background: url("../img/home-screen-bg.jpg") no-repeat fixed center bottom / cover rgba(0, 0, 0, 0);
+
+    .side-menu-btn {
+        top: 20px;
+        left: 20px;
+        font-size: 40px;
+        width: 44px;
+        height: 44px;
+        color: #ffffff;
+    }
 
     .armorial-wrapper {
         width: 100%;
