--- a/platforms/ios/www/assets/css/snap.css
+++ b/platforms/ios/www/assets/css/snap.css
@@ -5,6 +5,7 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  position: absolute;
 }
 
 .snap-content {
@@ -16,7 +17,7 @@ html, body {
   width: auto;
   height: auto;
   z-index: 2;
-  overflow: auto;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -webkit-transform: translate3d(0, 0, 0);
      -moz-transform: translate3d(0, 0, 0);
@@ -43,7 +44,7 @@ html, body {
   left: auto;
   width: 265px;
   height: auto;
-  overflow: auto;
+  overflow: hidden;
   -webkit-overflow-scrolling: touch;
   -webkit-transition: width 0.3s ease;
      -moz-transition: width 0.3s ease;
@@ -53,9 +54,10 @@ html, body {
 }
 
 .snap-drawer-left {
-  background-color: cyan;
+  background-color: #ffffff;
   left: 0;
   z-index: 1;
+  overflow: hidden;
 }
 
 .snap-drawer-right {
@@ -87,12 +89,12 @@ html, body {
 
 /* Show the "Drag" background in the demo */
 #content {
-	background: #BFC7D8 url(drag.png) center 75% no-repeat;
+	background: #fafafa center 75% no-repeat; 
 }
 
 #open-left {
-  background: url(open.png) center center no-repeat;
+ /* background: url(open.png) center center no-repeat;
   display: block;
   width: 44px;
-  height: 44px;
+  height: 44px; */
 }
