--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -531,6 +531,45 @@ body {
   margin: 0px;
 }
 /* === END Left Menu === */
+/* === Section-tabs === */
+.section-tabs {
+  background: #f7f7f7;
+  padding: 0px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #dfdfdf;
+}
+.section-tabs > .tab {
+  position: relative;
+  line-height: 50px;
+  padding: 0 10px;
+  border-right: 1px solid #dfdfdf;
+  font-size: 16px;
+  font-weight: 600;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-transform: uppercase;
+}
+.section-tabs > .tab:last-child {
+  border-right: 0px;
+}
+.section-tabs > .tab.active {
+  background: #fff;
+}
+.section-tabs > .tab.active .flag-active {
+  display: block;
+}
+.section-tabs > .tab .flag-active {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 5px;
+  width: 100%;
+  background: #43c364;
+  display: none;
+}
+/* === END Section-tabs === */
 /* ===== Home Screen ===== */
 .home-tpl {
   width: 100%;
@@ -659,6 +698,53 @@ body {
   margin-bottom: 5px;
 }
 /* ===== END Bills Detail Preview Screen ===== */
+/* ===== MPS Screen ===== */
+.mps-tpl > .row,
+.mps-tpl .content-wrapper {
+  padding: 0px;
+}
+.mps-tpl .short-preview {
+  padding: 10px 10px 0px 10px;
+  background: #fff;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #dfdfdf;
+}
+.mps-tpl .short-preview .profile-image {
+  width: 45px;
+  height: 70px;
+  float: left;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 45px;
+}
+.mps-tpl .short-preview .name {
+  margin-bottom: 5px;
+  font-size: 14px;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.mps-tpl .short-preview .info {
+  float: left;
+  padding-top: 0px;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+.mps-tpl .short-preview .info li {
+  overflow: hidden;
+  text-align: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.mps-tpl .short-preview .preview-btn {
+  margin-top: 5px;
+}
+.mps-tpl .short-preview > .col > .row {
+  padding: 0px;
+}
+/* ===== END MPS Screen ===== */
 /* ===== Options Screen ===== */
 .options-tpl {
   padding-top: 75px;
